2016-11-16  Jimmy Petersson  <jimmy@molflow.com>

	* Mscripts_arts/earth_radius.m: Moved from Mscripts_atmlab

2016-11-16  Jimmy Petersson  <jimmy@molflow.com>

	* Build_scripts/: Moved from Run_scripts and adapted to data and
	settings moved to qsmr_data.
	* Mscripts_atmlab/earth_radius.m: Moved to this repo from
	qsmr_data/Settings.

2016-11-16  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_qsystem/q2_version.m: Verion now set to qsmr-beta-6.

	* Mscripts_arts/q2_inv.m (subfun4l2): Changed back to VMR/VMR AVKs.

2016-11-15  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* Mscripts_database/l1b_homemade.m: Made clear in header that LOG
	produced does not inlcude URLs.

	* Mscripts_qsystem/q2_check_versions.m: Now takling the Qsmr
	version from the function below.

	* Mscripts_qsystem/q2_version.m: New. From now on the Qsmr version
	string is set in this function. The present string is 'qsmr-beta-5'.

2016-11-14  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-4

	* Mscripts_arts/q2_artscfile_full.m (cfile_abs): Changed
	extpolfac in propmat_clearskyAddFromLookup to 1.

2016-11-13  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-3

	* Mscripts_arts/q2_inv.m (subfun4l2): Q.T.L2NAME now used. Added
	two fields to L2I, SBpath and Tsat.

	* Mscripts_arts/q2_oemiter.m (q2_oemiter): Q.T.LIMITS introduced.

	* Mscripts_arts/q2_arts_y.m: Changed p_std to p_stnd.

2016-11-11  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-2

	* Mscripts_arts/q2_arts_y.m:
	* Mscripts_arts/q2_artscfile_full.m: Partition functions are now
	read from file, instead of using the internal ones.

2016-11-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* qsmr-beta-1

	* From now on this file must contain a version number on line 3.
	Follow the example above.

	* This is the first version with data and settings moved to
	qsmr_data. Skipping all details for this commit.

2016-10-24 Jimmy Petersson  <jimmy@molflow.com>
