@@ -207,20 +207,41 @@ if any( strcmp( part, { 'backend', 'all' } ) )  |  do_total
     C.LO           = R.LO(i);
     C.F_GRID_NFILL = Q.F_GRID_NFILL;
     %
-    % Sideband response. So far just a flat function 
     G.name      = 'Sideband response function';
     G.gridnames = { 'Frequency' };
-    % Add 10 kHz margin to avoid error due to rounding
-    G.grids     = { symgrid( [ 1e9, min(abs(R.F_GRID([1 end])-R.LO(i)))-10e3 ] ) };
     G.dataname  = 'Response';
     %
-    rs = Q.SIDEBAND_LEAKAGE;
-    rm = 1 - rs;
-    %
-    if f_backend(1) > R.LO(i)
-      G.data      = [ rs rs rm rm ];
+    % Sideband filter defined as a single scalar:
+    if isnumeric( Q.SIDEBAND_LEAKAGE )  &  isscalar( Q.SIDEBAND_LEAKAGE )
+      % Create a 4-point grid. Add 10 kHz margin to avoid error due to rounding
+      G.grids     = { symgrid( [ 1e9, min(abs(R.F_GRID([1 end])-R.LO(i)))-10e3 ] ) };
+      %
+      if f_backend(1) > R.LO(i)
+        G.data      = [ Q.SIDEBAND_LEAKAGE*[1 1] (1-Q.SIDEBAND_LEAKAGE)*[1 1] ];
+      else
+        G.data      = [ (1-Q.SIDEBAND_LEAKAGE)*[1 1] Q.SIDEBAND_LEAKAGE*[1 1] ];
+      end
+    % Sideband filter defined using gformat
+    elseif isstruct( Q.SIDEBAND_LEAKAGE )  
+      % Create a coarse grid. Add 10 kHz margin to avoid error due to rounding
+      G.grids     = { symgrid( linspace( 3e9, ...
+                                         min(abs(R.F_GRID([1 end])-R.LO(i)))-10e3,...
+                                         21 ) ) };      
+      % Interpolate in Tcal and SPpath:
+      SB = gf_regrid( Q.SIDEBAND_LEAKAGE, { Q.SIDEBAND_LEAKAGE.GRID1, ...
+                                            L1B.Tcal(i), L1B.SBpath(i) } );  
+      f_vec = SB.GRID1 - R.LO(i);
+      r_vec = vec2row( SB.DATA );
+      if f_backend(1) > R.LO(i)
+        f_vec = [ -f_vec(end:-1:1) f_vec ];
+        r_vec = [ r_vec(end:-1:1) 1-r_vec ];
+      else      
+        f_vec = [ f_vec -f_vec(end:-1:1) ];
+        r_vec = [ 1-r_vec r_vec(end:-1:1) ];
+      end
+      G.data = interp1( f_vec, r_vec, G.grids{1} );
     else
-      G.data      = [ rm rm rs rs ];
+      error( 'Unknown format found for Q.SIDEBAND_LEAKAGE.' );
     end
     C.SIDEBAND_FILE = fullfile( R.workfolder, 'sideband_response.xml' );
     xmlStore( C.SIDEBAND_FILE, G, 'GriddedField1', 'binary' );
